--- a/Chat/app/src/main/res/values/strings.xml
+++ b/Chat/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">Chat</string>
-    <string name="url_debug" />
-    <string name="url" />
     <string name="title_activity_principal">Principal</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -15,4 +13,9 @@
     <string name="menu_slideshow">Slideshow</string>
 
     <string name="home_second">Home Second</string>
+
+
+    <string name="url">http://app-lab.com.mx/Chat/</string>
+    <string name="url_GetCategorias">api/GetCategorias</string>
+    <string name="url_GetSalas">api/GetSalas</string>
 </resources>
